--- a/newex/newex.html
+++ b/newex/newex.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="/newex.js"></script>
-		<link rel="stylesheet" type="text/css" href="/newex.css">
+		<script src="http://borismoore.github.com/jsrender/jsrender.js" type="text/javascript"></script>
+		<!--<script type="text/javascript" src="newex.js"></script>-->
+		<link rel="stylesheet" type="text/css" href="newex.css">
 		<title>newex - the new way to explore the v2ex.com</title>
 	</head>
 	<body>
@@ -13,15 +14,21 @@
 					<a href="javascript:void(0)">reload</a>
 				</li>
 				<li>
-					<a href="javascript:void(0)">view original</a>
+					<a id="original-link" href="javascript:void(0)">view original</a>
 				</li>
 			</ul>
 		</div><!-- end of toolbar -->
 		<div class="board" id="board">
 			<div class="topic byUSERID" id="TOPICID">
-				<div class="title">
-					<h1>TITLE</h1>
-				</div><!-- end of title -->
+				<div class="title"><h1>TITLE</h1> in <span class="subcat"></span></div>
+				<div class="main">
+					<div class="meta">
+						<a class="author" href="/member/AUTHOR">SOMEBODY</a>
+						<span class="time">1 min ago</span>
+						<a class="permalink" href="/t/TOPICID">&infin;</a>
+					</div><!-- end of meta -->
+					<div class="text"></div>
+				</div>
 				<div class="commentarea">
 					<div class="comment" id="COMMENT_ID">
 						<div class="meta">
