--- a/newex/newex.html
+++ b/newex/newex.html
@@ -3,7 +3,7 @@
 	<head>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script src="http://borismoore.github.com/jsrender/jsrender.js" type="text/javascript"></script>
-		<!--<script type="text/javascript" src="newex.js"></script>-->
+		<script type="text/javascript" src="newex.js"></script>
 		<link rel="stylesheet" type="text/css" href="newex.css">
 		<title>newex - the new way to explore the v2ex.com</title>
 	</head>
@@ -11,37 +11,48 @@
 		<div class="toolbar">
 			<ul>
 				<li>
-					<a href="javascript:void(0)">reload</a>
+					<a href="javascript:void(0)" onclick="update()">reload</a>
 				</li>
 				<li>
 					<a id="original-link" href="javascript:void(0)">view original</a>
 				</li>
 			</ul>
 		</div><!-- end of toolbar -->
-		<div class="board" id="board">
-			<div class="topic byUSERID" id="TOPICID">
-				<div class="title"><h1>TITLE</h1> in <span class="subcat"></span></div>
+
+		<!--<iframe id="source" name="source" src="http://www.v2ex.com/changes?p=1" onload="console.log("></iframe>-->
+		<div class="board" id="board"></div>
+
+		<!-- clone and fill into #board -->
+		<script id="topic-template" type="text/x-jquery-tmpl">
+			<div class="topic by{{=authorId}}" id="{{=id}}">
+				<div class="title">
+					<a href="/t/{{=id}}#reply{{=comments}}">{{=title}}</a> in <span class="subcat">{{=tagHumanName}}</span>
+				</div>
 				<div class="main">
 					<div class="meta">
-						<a class="author" href="/member/AUTHOR">SOMEBODY</a>
-						<span class="time">1 min ago</span>
-						<a class="permalink" href="/t/TOPICID">&infin;</a>
+						<a class="author" href="/member/{{=author}}">{{=author}}</a>
+						<span class="time">{{=time}} ago</span>
+						<a class="permalink" href="/t/{{=id}}">&infin;</a>
 					</div><!-- end of meta -->
 					<div class="text"></div>
 				</div>
-				<div class="commentarea">
-					<div class="comment" id="COMMENT_ID">
-						<div class="meta">
-							<a class="author" href="/member/AUTHOR">SOMEBODY</a>
-							<span class="time">1 min ago</span>
-							<a class="permalink" href="/t/TOPICID#reply_COMMENTID_buttons">&infin;</a>
-						</div><!-- end of meta -->
-						<div class="text">
-							<!-- COMMENT BODY -->
-						</div><!-- end of text -->
-					</div><!-- end of comment -->
-				</div><!-- end of commentarea -->
+				<div class="commentarea"></div>
 			</div><!-- end of topic -->
-		</div><!-- end of board -->
+		</script>
+
+		<!-- clone and fill into .commentarea -->
+		<script id="comment-template" type="text/x-jquery-tmpl">
+			<div class="comment" id="COMMENT_ID">
+				<div class="meta">
+					<a class="author" href="/member/AUTHOR">SOMEBODY</a>
+					<span class="time">1 min ago</span>
+					<a class="permalink" href="/t/TOPICID#reply_COMMENTID_buttons">&infin;</a>
+				</div><!-- end of meta -->
+				<div class="text">
+					<!-- COMMENT BODY -->
+				</div><!-- end of text -->
+			</div><!-- end of comment -->
+		</script>
+
 	</body>
 </html>
