--- a/newex/newex.html
+++ b/newex/newex.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script src="http://borismoore.github.com/jsrender/jsrender.js" type="text/javascript"></script>
+		<script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="text/javascript"></script>
 		<script type="text/javascript" src="newex.js"></script>
 		<link rel="stylesheet" type="text/css" href="newex.css">
 		<title>newex - the new way to explore the v2ex.com</title>
@@ -19,7 +19,6 @@
 			</ul>
 		</div><!-- end of toolbar -->
 
-		<!--<iframe id="source" name="source" src="http://www.v2ex.com/changes?p=1" onload="console.log("></iframe>-->
 		<div class="board" id="board"></div>
 
 		<!-- clone and fill into #board -->
