now render speed is 60 times faster because i fixed a mistake...

--- a/newex/index.html
+++ b/newex/index.html
@@ -13,7 +13,7 @@
 		<div id="toolbar" class="toolbar">
 			<ul>
 				<li>
-				<a href="javascript:void(0);" onclick="update()">⟳ refresh</a>
+				<a href="javascript:void(0);" onclick="updateBoard(1)">⟳ refresh</a>
 				</li>
 				<li>
 				|
