--- a/v.js/paste_into_settings.html
+++ b/v.js/paste_into_settings.html
@@ -1,3 +1,9 @@
+<!--
+/* Copyright (c) 2012 Md Gao
+ * MIT /LICENSE
+ * Improve my V2EX experience
+ */
+-->
 	</style>
 
 <script type="text/javascript">
