LARGE logo, NEW header, minor bug fixes, Firefox support started

--- a/v.js/paste_into_settings.html
+++ b/v.js/paste_into_settings.html
@@ -1,9 +1,14 @@
-<!--
+/* ~ */
 /* Copyright (c) 2012 Md Gao
  * MIT /LICENSE
  * Improve my V2EX experience
  */
--->
+
+* {
+	-webkit-transition: all .6s;
+	-moz-transition: all .6s;
+}
+
 	</style>
 
 <script type="text/javascript">
