added fav and notify into the header nav

--- a/v.js/paste_into_settings.html
+++ b/v.js/paste_into_settings.html
@@ -17,11 +17,21 @@
 		document.body.innerHTML = '<h1>&nbsp;&nbsp;redirecting to <a href="/changes">/changes</a>';
 		window.location.pathname = "/changes";
 	} else {
-		//$.getScript("http://localhost/v.js?" + Date.parse(new Date()));
+		// getScript started: 1334108158000_236
+		// getScript end: 1334108158000_262
+		// createElement started: 1334108158000_263
+		// createElement end: 1334108158000_265
+
+		// console.log("getScript started: " + Date.parse(new Date()) + "_" + new Date().getMilliseconds());
+		// $.getScript("http://localhost/v.js?" + Date.parse(new Date()));
+		// console.log("getScript end: " + Date.parse(new Date()) + "_" + new Date().getMilliseconds());
+
+		console.log("createElement started: " + Date.parse(new Date()) + "_" + new Date().getMilliseconds());
 		var js = document.createElement("script");
 		js.type = "text/javascript";
 		js.src = "http://localhost/v.js?" + Date.parse(new Date());
 		document.getElementsByTagName("head")[0].appendChild(js);
+		console.log("createElement end: " + Date.parse(new Date()) + "_" + new Date().getMilliseconds());
 	
 		var css = document.createElement("link");
 		css.rel = "stylesheet";
