checked and (partially) fixed with JSHint

--- a/v.js/paste_into_settings.html
+++ b/v.js/paste_into_settings.html
@@ -12,6 +12,7 @@
 <script type="text/javascript">
 
 function init() {
+	"use strict";
 	if (window.unsupportedBrowser) {
 		alert("Please upgrade to at least Internet Explorer 8 or use Google Chrome.");
 		return;
