--- a/paste_into_settings.html
+++ b/paste_into_settings.html
@@ -13,6 +13,7 @@
 
 function init() {
 	"use strict";
+	document.body.style.display = "none";
 	var urlPrefix = "//localhost";
 	if (!window.console) { window.console = {}; }
 	if (!window.console.log) { window.console.log = function() {}; }
