--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="assets/css/bootstrap.css" />
-	<link rel="stylesheet" href="assets/css/bootstrap-responsive.css" />
+	<!--<link rel="stylesheet" href="assets/css/bootstrap-responsive.css" />-->
 	<link rel="stylesheet" href="http://fortawesome.github.com/Font-Awesome/assets/css/font-awesome.css" />
 	<link rel="stylesheet" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/js/jquery.js"></script>	
+	<script type="text/javascript" src="assets/js/doT.js"></script>	
 	<script type="text/javascript" src="assets/js/bootstrap.js"></script>	
-	<script type="text/javascript" src="https://raw.github.com/olado/doT/master/benchmarks/templating/doT.js"></script>	
 	<title>Subv</title>
 </head>
 <body>
@@ -47,38 +47,39 @@
 		</div><!-- .row -->
 	</div>
 
-	<script type="text/template" id="item">
+<script type="text/template" id="item">
 
-					<div class="item" id="item{{=it.topic.id}}">
-						<div class="heading">
-							<h2>
-								<a class="label label-info label-tag" href="{{=it.tag.path}}">{{=it.tag.name}}</a>
-								<span> / </span>
-								<a class="title" href="{{=it.topic.path}}">{{=it.topic.title}}</a>
-							</h2>
-						</div>
-						<div class="meta">
-							<span>
-								<button class="btn btn-large btn-counts">
-									<span class="comments-count">{{=it.commentsCount}}</span> <i class="icon-comment"></i>
-									<span> &bullet; </span>
-									<span class="views-count">{{=it.viewsCount}}</span> <i class="icon-eye-open"></i>
-								</button>
-							</span>
-							<div class="last-by pull-right">
-								<span title="{{=it.timeIso}}">{{=it.timeAgo}}</span>
-								<span> by </span>
-								<a href="{{=it.lastUpdaterPath}}">{{=it.lastUpdaterName}} ({{=it.lastUpdaterId}})</a>
-							</div>
-						</div>
-					</div><!-- .item -->
+	<div class="item" id="item{{=it.topic.id}}">
+		<div class="heading">
+			<h2>
+				<a class="label label-info label-tag" href="{{=it.tag.path}}">{{=it.tag.name}}</a>
+				<span> / </span>
+				<a class="title" href="{{=it.topic.path}}">{{=it.topic.title}}</a>
+			</h2>
+		</div>
+		<div class="meta">
+			<span>
+				<button class="btn btn-large btn-counts">
+					<span class="comments-count">{{=it.commentsCount}}</span> <i class="icon-comment"></i>
+					<span> &bullet; </span>
+					<span class="views-count">{{=it.viewsCount}}</span> <i class="icon-eye-open"></i>
+				</button>
+			</span>
+			<div class="last-by pull-right">
+				<span title="{{=it.timeIso}}">{{=it.timeAgo}}</span>
+				<span> by </span>
+				<a href="{{=it.lastUpdaterPath}}">{{=it.lastUpdaterName}} ({{=it.lastUpdaterId}})</a>
+			</div>
+		</div>
+	</div><!-- .item -->
 
-	</script>
+</script>
 
-	<script >
-		(function() {
-			$("#list").append( (doT.template($("#item").text()))(itSrc) );
-		})();
+<script type="text/javascript">
 
-	</script>
+	(function() {
+		$("#list").append( (doT.template($("#item").text()))(itSrc) );
+	})();
+
+</script>
 </body>
