--- a/index.html
+++ b/index.html
@@ -18,35 +18,41 @@
 
 	<div class="container">
 		<div class="row">
-
-			<div class="navbar">
-				<div class="navbar-inner">
-					<div class="container">
-						<a href="/" class="brand">V2EX</a>
-						<div class="nav-null-class">
-							<ul class="nav">
-								<li><a href="#">profile</a></li>
-								<li><a href="#">replies</a></li>
-								<li><a href="#">favs</a></li>
-							</ul><!-- .nav -->
-							<ul class="nav pull-right">
-								<li><a href="#">prefs</a></li>
-								<li><a href="#">logout</a></li>
-							</ul>
-							<form class="navbar-search">
-								<input type="text" class="search-query span2"></input>
-							</form>
-						</div><!-- .nav-null-class -->
+			<div class="span12">
+				<div class="navbar">
+					<div class="navbar-inner">
+						<div class="container">
+							<a href="/" class="brand">V2EX</a>
+							<div class="nav-null-class">
+								<ul class="nav">
+									<li><a href="#">profile</a></li>
+									<li><a href="#">replies</a></li>
+									<li><a href="#">favs</a></li>
+								</ul><!-- .nav -->
+								<ul class="nav pull-right">
+									<li><a href="#">prefs</a></li>
+									<li><a href="#">logout</a></li>
+								</ul>
+								<form class="navbar-search">
+									<input type="text" class="search-query span2"></input>
+								</form>
+							</div><!-- .nav-null-class -->
+						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<div class="span12" id="list-container">
+		<div class="row">
+			<div class="span1">&nbsp;</div>
+			<div class="span11" id="list-container">
 				<div id="list">
 					<!-- .item's here -->
 				</div>
 			</div>
+		</div>
 
+		<div class="row" id="toolbar-container">
 			<div class="span4">&nbsp;</div>
 			<div class="span4">
 				<button class="btn btn-large" id="more">more</button>
@@ -58,6 +64,9 @@
 <script type="text/template" id="item">
 
 	<div class="item" id="item{{=it.topic.id}}">
+		<div class="item-checker">
+			<p><i class="icon-remove-sign"></i></p>
+		</div>
 		<div class="heading">
 			<h2>
 				<a class="label label-info label-tag" href="{{=it.tag.path}}">{{=it.tag.name}}</a>
@@ -80,20 +89,6 @@
 			</div>
 		</div>
 	</div><!-- .item -->
-
-</script>
-<script type="text/javascript">
-
-	window.Subv = {
-		"current_page": 1
-	};
-	$(function() {
-			$("#more").on("click", function() {
-				Subv.current_page++;
-				appendItems(Subv.current_page);
-			});
-			appendItems(Subv.current_page);
-	});
 
 </script>
 </body>
