--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <script type="text/template" id="item">
 
-	<div class="item" id="item{{=it.topic.id}}">
+	<div class="item well" id="item{{=it.topic.id}}">
 		<div class="item-checker">
 			<p><i class="icon-remove-sign"></i></p>
 		</div>
