--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="assets/css/bootstrap.css" />
 	<!--<link rel="stylesheet" href="assets/css/bootstrap-responsive.css" />-->
-	<link rel="stylesheet" href="http://fortawesome.github.com/Font-Awesome/assets/css/font-awesome.css" />
+	<link rel="stylesheet" href="assets/css/font-awesome.css" />
 	<link rel="stylesheet" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/js/jquery.js"></script>	
 	<script type="text/javascript" src="assets/js/doT.js"></script>	
@@ -53,13 +53,77 @@
 		</div>
 
 		<div class="row" id="toolbar-container">
-			<div class="span4">&nbsp;</div>
+			<div class="span1">
+				<button class="btn btn-large btn-primary">Apply</button>
+			</div>
+			<div class="span3">&nbsp;</div>
 			<div class="span4">
 				<button class="btn btn-large" id="more">more</button>
 			</div>
 			<div class="span4">&nbsp;</div>
 		</div>
 	</div><!-- .container -->
+
+	<div class="overlay" id="overlay"></div>
+	<div class="span9 well well-small" id="topic">
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+		<p>huoenshunsoehu</p>
+	</div>
 
 <script type="text/template" id="item">
 
