--- a/index.html
+++ b/index.html
@@ -66,68 +66,11 @@
 
 	<div class="overlay" id="overlay"></div>
 	<div class="span9 well well-small" id="topic">
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
-		<p>huoenshunsoehu</p>
 	</div>
 
 <script type="text/template" id="item">
 
-	<div class="item well" id="item{{=it.topic.id}}">
+	<div class="item" id="item{{=it.topic.id}}">
 		<div class="item-checker">
 			<p><i class="icon-remove-sign"></i></p>
 		</div>
@@ -153,6 +96,21 @@
 			</div>
 		</div>
 	</div><!-- .item -->
+
+</script>
+
+
+<script type="text/template" id="comment-item">
+
+	<div class="comment" id="comment{{=it.id}}">
+		<div class="meta">
+			<a class="author" href="{{=it.user.path}}">{{=it.user.name}}</a>
+			<span class="time" title="{{=it.timeIso}}">{{=it.timeAgo}}</span>
+		</div>
+		<div class="content">
+			{{=it.contentHtml}}
+		</div>
+	</div>
 
 </script>
 </body>
