Now comments shown inline, performance great!

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 				<a href="{{=it.comments[1].user.path}}">{{=it.comments[1].user.name}}</a>
 			</div>
 		</div>
+		<div class="comments-container">
+		</div>
 	</div><!-- .item -->
 
 </script>
