--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="assets/css/bootstrap.css" />
+	<link rel="stylesheet" href="assets/third/css/bootstrap.css" />
 	<!--<link rel="stylesheet" href="assets/css/bootstrap-responsive.css" />-->
-	<link rel="stylesheet" href="assets/css/font-awesome.css" />
+	<link rel="stylesheet" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" href="assets/css/subv.css" />
-	<script type="text/javascript" src="assets/js/jquery.js"></script>	
-	<script type="text/javascript" src="assets/js/doT.js"></script>	
-	<script type="text/javascript" src="assets/js/bootstrap.js"></script>	
+	<script type="text/javascript" src="assets/third/js/jquery.js"></script>	
+	<script type="text/javascript" src="assets/third/js/doT.js"></script>	
+	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>	
 	<script type="text/javascript" src="assets/js/subv.js"></script>	
 	<script type="text/javascript" src="assets/js/subv-expose-json.js"></script>	
 	<title>Subv</title>
