Ignore anthor clicks, refined style, better control bar placement

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
 		</div>
 
 		<div class="row" id="toolbar-container">
-			<div class="span2">
-				<button class="btn btn-large btn-primary">Apply</button>
-			</div>
+			<div class="span2">&nbsp;</div>
 			<div class="span8">
+				<button class="btn btn-large btn-primary">Apply</button>
 				<button class="btn btn-large" id="more">more</button>
 			</div>
 			<div class="span2">&nbsp;</div>
@@ -78,7 +77,7 @@
 		<div class="heading">
 			<h3>
 				<a class="label label-info label-tag" href="{{=it.tag.path}}">{{=it.tag.name}}</a>
-				<a class="title" href="{{=it.topic.path}}">{{=it.topic.title}}</a>
+				<a class="title clickpass" href="{{=it.topic.path}}">{{=it.topic.title}}</a>
 			</h3>
 		</div>
 		<div class="meta">
