showing comments/views word instead of icon looks classy!!
updated font-family mainly for OS X, and

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 			</h3>
 		</div>
 		<div class="meta">
-			<span class="comments-count"><i class="icon-comment"></i>{{=it.topic.comments}}</span>
+			<span class="comments-count"><!--<i class="icon-comment"></i>-->{{=it.topic.comments}} comments</span>
 			&bullet;
-			<span class="views-count"><i class="icon-eye-open"></i>{{=it.topic.views}}</span>
+			<span class="views-count"><!--<i class="icon-eye-open"></i>-->{{=it.topic.views}} views</span>
 			<div class="pull-right">
 				<a href="{{=it.comments[0].user.path}}">{{=it.comments[0].user.name}}</a>
 				&bullet;
