code clean, now can collapse item correctly

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <script type="text/template" id="item">
 
-	<div class="item btn" id="item{{=it.id}}">
+	<div class="item btn" id="item-{{=it.id}}">
 		<div class="item-checker">
 			<p><i class="icon-remove-sign"></i></p>
 		</div>
@@ -114,7 +114,7 @@
 
 <script type="text/template" id="comment-item">
 
-	<div class="comment-item" id="comment{{=it.id}}">
+	<div class="comment-item" id="comment-{{=it.id}}">
 		<div class="comment-no">
 			<p>{{=it.no}}</p>
 		</div>
