fixes various bugs, strip avatar while parsing html as dom,
and log function instead of console.log,

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="span2">&nbsp;</div>
 			<div class="span8">
 				<button class="btn btn-large btn-primary">Apply</button>
-				<button class="btn btn-large"><i class="icon-refresh"></i> Reload</button>
+				<button id="reload" class="btn btn-large"><i class="icon-refresh"></i> Reload</button>
 				<button class="btn btn-large span4 pull-right" id="more">more</button>
 			</div>
 			<div class="span2">&nbsp;</div>
