--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
 					<div class="navbar-inner">
 						<div class="container">
 							<a href="/" class="brand" id="logo">V2EX</a>
-							<div class="nav-null-class">
-								<ul class="nav">
-									<li><a href="#">profile</a></li>
-									<li><a href="#">replies</a></li>
-									<li><a href="#">favs</a></li>
-								</ul><!-- .nav -->
-								<ul class="nav pull-right">
+							<form class="navbar-search" onsubmit="window.open('https://www.google.com/search?q=site%3Av2ex.com%2Ft+' + document.getElementById('q').value); return false;">
+								<input id="q" type="text" class="search-query span2"></input>
+							</form>
+							<div class="btn-group pull-right">
+								<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown">
+									<i class="icon-chevron-down"></i>
+									<!--<span class="caret"></span>-->
+								</button>
+								<ul class="dropdown-menu dropdown-menu-no-caret">
+									<li><a href="#">my profile</a></li>
+									<li><a href="#">notifications</a></li>
+									<li><a href="#">favorites</a></li>
 									<li><a href="#">prefs</a></li>
-									<li><a href="#">logout</a></li>
+									<li><a href="#">sign out</a></li>
 								</ul>
-								<form class="navbar-search">
-									<input type="text" class="search-query span2"></input>
-								</form>
-							</div><!-- .nav-null-class -->
+							</div>
 						</div>
 					</div>
 				</div>
