--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 	<!--<link rel="stylesheet" href="assets/third/css/bootstrap-responsive.css" />-->
 	<link rel="stylesheet" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" href="assets/css/subv.css" />
-	<script type="text/javascript" src="assets/third/js/jquery.js"></script>	
+	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
 	<script type="text/javascript" src="assets/third/js/doT.js"></script>	
-	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>	
+	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>
 	<script type="text/javascript" src="assets/js/subv.js"></script>	
 	<script type="text/javascript" src="assets/js/subv-expose-json.js"></script>	
 	<title>Subv</title>
 </head>
 <body>
-
 	<div class="container">
 		<div class="row">
 			<div class="span8">
@@ -44,17 +43,15 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="row">
-			<div class="span8" id="list-container">
+			<div class="span8">
 				<div id="list">
 					<!-- .item's here -->
 				</div>
 			</div>
 		</div>
-
-		<div class="row" id="toolbar-container">
-			<div class="span8">
+		<div class="row">
+			<div class="span8 footer-toolbar">
 				<!--<button class="btn btn-large btn-primary">Apply</button>-->
 				<button id="reload" class="btn btn-large btn-primary"><i class="icon-refresh"></i> Reload</button>
 				<button class="btn btn-large span4 pull-right" id="more">more</button>
@@ -128,3 +125,4 @@
 
 </script>
 </body>
+<!-- EOF -->
