improve landing.html

--- a/landing.html
+++ b/landing.html
@@ -3,28 +3,48 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Get Subv</title>
 	<link rel="stylesheet" href="assets/third/css/bootstrap.css" />
 	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
 	<script type="text/javascript">
 		function callback(data) {
 			console.log("callbacked");
 			console.log("version_latest: " + data.version_latest);
-			$("#download").attr("href", "//raw.github.com/gDD/subv-build/master/subv-" + data.version_latest + ".crx");
+			$("#version").text(data.version_latest);
 		}
 	</script>
-	<title>Get Subv</title>
+	<style>
+		.btn-huge {
+			font-size: 2em;
+			margin-right: 1em;
+		}
+		.container {
+			width: 640px;
+		}
+		.latest-version {
+			margin-top: 1em;
+		}
+		.span8 {
+			margin-top: 100px;
+		}
+		#chrome-logo {
+			width: 48px;
+			margin-right: 12px;
+		}
+	</style>
 </head>
 <body>
-	<div class="container" style="width: 640px;">
+	<div class="container">
 		<div class="row">
 			<div class="span8">
-				<div style="height: 100px">&nbsp;</div>
-				<h1 style="margin-bottom: 1em">Subv is a Google Chrome extension.</h1>
-				<a class="btn btn-large btn-primary" style="font-size: 2em;" href="#" id="download">Install Subv</a>
-				<a class="btn btn-large" style="font-size: 2em; margin-left: 1em;" href="//github.com/gDD/subv">Fork me on GitHub</a>
+				<h1 style="margin-bottom: 1em"><img src="http://upload.wikimedia.org/wikipedia/en/thumb/f/fa/Google_Chrome_2011_computer_icon.svg/200px-Google_Chrome_2011_computer_icon.svg.png" alt="Google Chrome Logo" id="chrome-logo">Subv is a Google Chrome extension.</h1>
+				<a class="btn btn-large btn-primary btn-huge" href="//raw.github.com/gDD/subv-build/master/subv-latest.crx">Install Subv</a>
+				<a class="btn btn-large btn-huge" href="//github.com/gDD/subv">Fork me on GitHub</a>
+				<h6 class="latest-version">latest version: <span id="version">checking...</span></h6>
 			</div>
 		</div>
 	</div>
+	<!-- update latest version -->
 	<script type="text/javascript" src="//raw.github.com/gDD/subv-build/master/subv-latest.jsonp"></script>
 </body>
 </html>
